--- a/Toggl.Foundation.Tests/Toggl.Foundation.Tests.csproj
+++ b/Toggl.Foundation.Tests/Toggl.Foundation.Tests.csproj
@@ -13,8 +13,8 @@
     <OutputPath>..\bin\Release\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Toggl.Foundation.MvvmCross\Toggl.Foundation.UI.csproj" />
     <ProjectReference Include="..\Toggl.Foundation\Toggl.Foundation.csproj" />
-    <ProjectReference Include="..\Toggl.Foundation.MvvmCross\Toggl.Foundation.MvvmCross.csproj" />
     <ProjectReference Include="..\Toggl.Multivac\Toggl.Multivac.csproj" />
     <ProjectReference Include="..\Toggl.Multivac.Tests\Toggl.Multivac.Tests.csproj" />
     <ProjectReference Include="..\Toggl.PrimeRadiant\Toggl.PrimeRadiant.csproj" />
