--- a/Toggl.Foundation.Tests/Toggl.Foundation.Tests.csproj
+++ b/Toggl.Foundation.Tests/Toggl.Foundation.Tests.csproj
@@ -13,7 +13,7 @@
     <OutputPath>..\bin\Release\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Toggl.Foundation.MvvmCross\Toggl.Foundation.UI.csproj" />
+    <ProjectReference Include="..\Toggl.Foundation.UI\Toggl.Foundation.UI.csproj" />
     <ProjectReference Include="..\Toggl.Foundation\Toggl.Foundation.csproj" />
     <ProjectReference Include="..\Toggl.Multivac\Toggl.Multivac.csproj" />
     <ProjectReference Include="..\Toggl.Multivac.Tests\Toggl.Multivac.Tests.csproj" />
