--- a/Toggl.Foundation.Tests.Sync/Toggl.Foundation.Tests.Sync.csproj
+++ b/Toggl.Foundation.Tests.Sync/Toggl.Foundation.Tests.Sync.csproj
@@ -11,7 +11,7 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Toggl.Foundation.MvvmCross\Toggl.Foundation.UI.csproj" />
+    <ProjectReference Include="..\Toggl.Foundation.UI\Toggl.Foundation.UI.csproj" />
     <ProjectReference Include="..\Toggl.Foundation\Toggl.Foundation.csproj" />
     <ProjectReference Include="..\Toggl.Foundation.Tests\Toggl.Foundation.Tests.csproj" />
     <ProjectReference Include="..\Toggl.Multivac\Toggl.Multivac.csproj" />
